--- a/src/Component/Nav/Nav.module.css
+++ b/src/Component/Nav/Nav.module.css
@@ -1,4 +1,3 @@
-
 .navbar {
     top: 7px;
     left: 10px;
@@ -28,13 +27,14 @@
     line-height: 2rem;
     letter-spacing: .03em;
     font-weight: bold;
-    color: #1a3a5f;
+    /* color: #1a3a5f; */
     margin: 3px;
 }
 
 .userSection {
     display: flex;
     align-items: center;
+    gap: 8px;
 }
 
 .avatarContainer {
@@ -58,11 +58,10 @@
 }
 
 .logo {
-    height: 44px;
-    width: 44px;
-    border-radius: 50%;
+    height: 50px;
+    width: 50px;
     object-fit: cover;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+
 }
 
 /* Responsive Styling */
