--- a/src/Component/Nav/Nav.module.css
+++ b/src/Component/Nav/Nav.module.css
@@ -27,6 +27,7 @@
     line-height: 2rem;
     letter-spacing: .03em;
     font-weight: bold;
+    color: #262323e1;
     /* color: #1a3a5f; */
     margin: 3px;
 }
