--- a/src/Pages/Requests/ApplicationPreview/ApplicationPreview.module.css
+++ b/src/Pages/Requests/ApplicationPreview/ApplicationPreview.module.css
@@ -76,6 +76,13 @@ input[type="file"] {
     outline: none;
 }
 
+input[type="text"] {
+    width: 50%;
+    padding: 8px;
+    border: 1px solid #ccc;
+    outline: none;
+}
+
 .buttons {
     display: flex;
     justify-content: center;
