--- a/src/Pages/Dashboards/Admin/Requests/RequestList/RequestList.module.css
+++ b/src/Pages/Dashboards/Admin/Requests/RequestList/RequestList.module.css
@@ -37,7 +37,7 @@
     transition: border-color 0.3s;
 }
 
-.searchInput:focus {
+.searchInputt:focus {
     outline: none;
     border-color: #007bff;
 }
