--- a/src/Component/Nav/Nav.module.css
+++ b/src/Component/Nav/Nav.module.css
@@ -66,7 +66,7 @@
 }
 
 /* Responsive Styling */
-@media (max-width: 768px) {
+/* @media (max-width: 768px) {
     .navbar {
         padding: 0 10px;
         height: 55px;
@@ -110,4 +110,4 @@
     .title {
         font-size: 18px;
     }
-}
+} */
