--- a/src/Pages/Dashboards/Admin/Departments/DeptList/DeptList.module.css
+++ b/src/Pages/Dashboards/Admin/Departments/DeptList/DeptList.module.css
@@ -16,7 +16,7 @@
     padding-bottom: 10px;
 }
 
-.topBar {
+.topActions {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -32,6 +32,7 @@
     width: 100%;
     padding: 10px 15px;
     border: 1px solid #ddd;
+    /* border-radius: 5px; */
     font-size: 14px;
     transition: border-color 0.3s;
 }
@@ -216,20 +217,6 @@
     margin: 7px 7px 20px;
     justify-content: space-between;
 
-}
-
-.searchInputt {
-    width: 33%;
-    padding: 10px 15px;
-    border: 1px solid #ddd;
-    /* border-radius: 5px; */
-    font-size: 14px;
-    transition: border-color 0.3s;
-}
-
-.searchInput:focus {
-    outline: none;
-    border-color: #007bff;
 }
 
 .deleteHead {
