--- a/src/Component/Sidebar/Sidebar.module.css
+++ b/src/Component/Sidebar/Sidebar.module.css
@@ -86,8 +86,8 @@
     .sidebar {
         transform: translateX(100%);
         right: 0;
-        width: 220px;
-        height: 100vh;
+        width: 200px;
+        /* height: 100vh; */
         border-radius: 0;
     }
 
