--- a/src/Component/Nav/Nav.module.css
+++ b/src/Component/Nav/Nav.module.css
@@ -1,8 +1,8 @@
 .navbar {
     top: 7px;
-    left: 10px;
-    right: 15px;
-    width: 95.5%;
+    margin-left: 14px;
+    margin-right: 10px;
+    width: 95.8%;
     height: 60px;
     background-color: white;
     display: flex;
@@ -66,11 +66,13 @@
 }
 
 /* Responsive Styling */
-/* @media (max-width: 768px) {
+@media (max-width: 768px) {
     .navbar {
         padding: 0 10px;
         height: 55px;
-        width: calc(100% - 20px);
+        width: calc(100% - 40px);
+
+
     }
 
     .title {
@@ -110,4 +112,4 @@
     .title {
         font-size: 18px;
     }
-} */
+}
