--- a/src/Pages/Dashboards/DashLayout/DashLayout.module.css
+++ b/src/Pages/Dashboards/DashLayout/DashLayout.module.css
@@ -45,7 +45,7 @@
     }
 
     .header {
-        margin-right: 0;
-        margin-left: 0;
+        margin-right: 10px;
+        margin-left: 10px;
     }
 }
