--- a/src/Pages/Dashboards/Admin/Dashboard/AdminDash.module.css
+++ b/src/Pages/Dashboards/Admin/Dashboard/AdminDash.module.css
@@ -46,7 +46,7 @@
     }
 
     .header {
-        margin-right: 0;
-        margin-left: 0;
+        margin-right: 10px;
+        margin-left: 10px;
     }
 }
