--- a/src/Component/TimeLine/TimeLine.module.css
+++ b/src/Component/TimeLine/TimeLine.module.css
@@ -27,9 +27,11 @@
   display: flex;
   align-items: center;
   margin-top: 20px;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   justify-content: center;
-  gap: 10px;
+  gap: 0;
+  width: 100%;
+  overflow-x: visible;
 }
 
 .step {
@@ -38,6 +40,9 @@
   align-items: center;
   color: #0a162b;
   margin-bottom: 15px;
+  flex: 1;
+  max-width: 25%;
+  min-width: 120px;
 }
 
 .circle {
@@ -58,11 +63,14 @@
 }
 
 .line {
-  width: 100px;
+  width: 100%;
   height: 2px;
   background-color: #bbcde0;
   z-index: 0;
   border-radius: 50px;
+  flex: 1;
+  max-width: 100px;
+  min-width: 60px;
 }
 
 .line.active {
@@ -71,21 +79,31 @@
 
 .stepLabel {
   margin-top: 8px;
-  font-size: 20px;
+  font-size: 16px;
   text-align: center;
-  width: 200px;
+  width: 100%;
   word-break: break-word;
+  padding: 0 5px;
 }
 
 /* Responsive Media Queries */
-@media (max-width: 1200px) {
+@media (min-width: 1400px) {
   .line {
-    width: 80px;
+    max-width: 150px;
   }
 
   .stepLabel {
-    width: 180px;
     font-size: 18px;
+  }
+}
+
+@media (max-width: 1200px) {
+  .line {
+    max-width: 80px;
+  }
+
+  .stepLabel {
+    font-size: 15px;
   }
 }
 
@@ -98,18 +116,17 @@
     font-size: 25px;
   }
 
-  .line {
-    width: 60px;
-  }
-
   .circle {
     width: 35px;
     height: 35px;
   }
 
   .stepLabel {
-    width: 150px;
-    font-size: 16px;
+    font-size: 14px;
+  }
+
+  .line {
+    min-width: 40px;
   }
 }
 
@@ -137,6 +154,7 @@
     flex-direction: row;
     width: 100%;
     margin-bottom: 10px;
+    max-width: 100%;
   }
 
   .circle {
@@ -148,6 +166,7 @@
     width: 2px;
     height: 30px;
     margin: 5px 0;
+    min-width: 2px;
   }
 
   .stepLabel {
